zamna-spin/bindings/http_trigger.h

typedef struct http_trigger_string_t {
  uint8_t*ptr;
  size_t len;
} http_trigger_string_t;
typedef struct wasi_io_0_2_0_poll_own_pollable_t {
  int32_t __handle;
} wasi_io_0_2_0_poll_own_pollable_t;
typedef struct wasi_io_0_2_0_poll_borrow_pollable_t {
  int32_t __handle;
} wasi_io_0_2_0_poll_borrow_pollable_t;
typedef struct {
  wasi_io_0_2_0_poll_borrow_pollable_t *ptr;
  size_t len;
} wasi_io_0_2_0_poll_list_borrow_pollable_t;
typedef struct {
  uint32_t *ptr;
  size_t len;
} http_trigger_list_u32_t;
// An instant in time, in nanoseconds. An instant is relative to an
// unspecified initial value, and can only be compared to instances from
// the same monotonic-clock.
typedef uint64_t wasi_clocks_0_2_0_monotonic_clock_instant_t;
// A duration of time, in nanoseconds.
typedef uint64_t wasi_clocks_0_2_0_monotonic_clock_duration_t;
typedef wasi_io_0_2_0_poll_own_pollable_t wasi_clocks_0_2_0_monotonic_clock_own_pollable_t;
typedef struct wasi_io_0_2_0_error_own_error_t {
  int32_t __handle;
} wasi_io_0_2_0_error_own_error_t;
typedef struct wasi_io_0_2_0_error_borrow_error_t {
  int32_t __handle;
} wasi_io_0_2_0_error_borrow_error_t;
typedef wasi_io_0_2_0_error_own_error_t wasi_io_0_2_0_streams_own_error_t;
// An error for input-stream and output-stream operations.
typedef struct wasi_io_0_2_0_streams_stream_error_t {
  uint8_t tag;
  union {
    wasi_io_0_2_0_streams_own_error_t     last_operation_failed;
  } val;
} wasi_io_0_2_0_streams_stream_error_t;
typedef struct wasi_io_0_2_0_streams_own_input_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_input_stream_t;
typedef struct wasi_io_0_2_0_streams_borrow_input_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_borrow_input_stream_t;
typedef struct wasi_io_0_2_0_streams_own_output_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_output_stream_t;
typedef struct wasi_io_0_2_0_streams_borrow_output_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_borrow_output_stream_t;
typedef struct {
  uint8_t *ptr;
  size_t len;
} http_trigger_list_u8_t;
typedef struct {
  bool is_err;
  union {
    http_trigger_list_u8_t ok;
    wasi_io_0_2_0_streams_stream_error_t err;
  } val;
} wasi_io_0_2_0_streams_result_list_u8_stream_error_t;
typedef struct {
  bool is_err;
  union {
    uint64_t ok;
    wasi_io_0_2_0_streams_stream_error_t err;
  } val;
} wasi_io_0_2_0_streams_result_u64_stream_error_t;
typedef wasi_io_0_2_0_poll_own_pollable_t wasi_io_0_2_0_streams_own_pollable_t;
typedef struct {
  bool is_err;
  union {
    wasi_io_0_2_0_streams_stream_error_t err;
  } val;
} wasi_io_0_2_0_streams_result_void_stream_error_t;
typedef wasi_clocks_0_2_0_monotonic_clock_duration_t wasi_http_0_2_0_types_duration_t;
// This type corresponds to HTTP standard Methods.
typedef struct wasi_http_0_2_0_types_method_t {
  uint8_t tag;
  union {
    http_trigger_string_t     other;
  } val;
} wasi_http_0_2_0_types_method_t;
// This type corresponds to HTTP standard Related Schemes.
typedef struct wasi_http_0_2_0_types_scheme_t {
  uint8_t tag;
  union {
    http_trigger_string_t     other;
  } val;
} wasi_http_0_2_0_types_scheme_t;
typedef struct {
  bool is_some;
  http_trigger_string_t val;
} http_trigger_option_string_t;
typedef struct {
  bool is_some;
  uint16_t val;
} http_trigger_option_u16_t;
// Defines the case payload type for `DNS-error` above:
typedef struct wasi_http_0_2_0_types_dns_error_payload_t {
  http_trigger_option_string_t   rcode;
  http_trigger_option_u16_t   info_code;
} wasi_http_0_2_0_types_dns_error_payload_t;
typedef struct {
  bool is_some;
  uint8_t val;
} http_trigger_option_u8_t;