zamna-spin/.zig-cache/o/74caa4b4e0853821cf59f10746e95f75/cimport.zig

pub const __builtin_bswap16 = @import("std").zig.c_builtins.__builtin_bswap16;
pub const __builtin_bswap32 = @import("std").zig.c_builtins.__builtin_bswap32;
pub const __builtin_bswap64 = @import("std").zig.c_builtins.__builtin_bswap64;
pub const __builtin_signbit = @import("std").zig.c_builtins.__builtin_signbit;
pub const __builtin_signbitf = @import("std").zig.c_builtins.__builtin_signbitf;
pub const __builtin_popcount = @import("std").zig.c_builtins.__builtin_popcount;
pub const __builtin_ctz = @import("std").zig.c_builtins.__builtin_ctz;
pub const __builtin_clz = @import("std").zig.c_builtins.__builtin_clz;
pub const __builtin_sqrt = @import("std").zig.c_builtins.__builtin_sqrt;
pub const __builtin_sqrtf = @import("std").zig.c_builtins.__builtin_sqrtf;
pub const __builtin_sin = @import("std").zig.c_builtins.__builtin_sin;
pub const __builtin_sinf = @import("std").zig.c_builtins.__builtin_sinf;
pub const __builtin_cos = @import("std").zig.c_builtins.__builtin_cos;
pub const __builtin_cosf = @import("std").zig.c_builtins.__builtin_cosf;
pub const __builtin_exp = @import("std").zig.c_builtins.__builtin_exp;
pub const __builtin_expf = @import("std").zig.c_builtins.__builtin_expf;
pub const __builtin_exp2 = @import("std").zig.c_builtins.__builtin_exp2;
pub const __builtin_exp2f = @import("std").zig.c_builtins.__builtin_exp2f;
pub const __builtin_log = @import("std").zig.c_builtins.__builtin_log;
pub const __builtin_logf = @import("std").zig.c_builtins.__builtin_logf;
pub const __builtin_log2 = @import("std").zig.c_builtins.__builtin_log2;
pub const __builtin_log2f = @import("std").zig.c_builtins.__builtin_log2f;
pub const __builtin_log10 = @import("std").zig.c_builtins.__builtin_log10;
pub const __builtin_log10f = @import("std").zig.c_builtins.__builtin_log10f;
pub const __builtin_abs = @import("std").zig.c_builtins.__builtin_abs;
pub const __builtin_labs = @import("std").zig.c_builtins.__builtin_labs;
pub const __builtin_llabs = @import("std").zig.c_builtins.__builtin_llabs;
pub const __builtin_fabs = @import("std").zig.c_builtins.__builtin_fabs;
pub const __builtin_fabsf = @import("std").zig.c_builtins.__builtin_fabsf;
pub const __builtin_floor = @import("std").zig.c_builtins.__builtin_floor;
pub const __builtin_floorf = @import("std").zig.c_builtins.__builtin_floorf;
pub const __builtin_ceil = @import("std").zig.c_builtins.__builtin_ceil;
pub const __builtin_ceilf = @import("std").zig.c_builtins.__builtin_ceilf;
pub const __builtin_trunc = @import("std").zig.c_builtins.__builtin_trunc;
pub const __builtin_truncf = @import("std").zig.c_builtins.__builtin_truncf;
pub const __builtin_round = @import("std").zig.c_builtins.__builtin_round;
pub const __builtin_roundf = @import("std").zig.c_builtins.__builtin_roundf;
pub const __builtin_strlen = @import("std").zig.c_builtins.__builtin_strlen;
pub const __builtin_strcmp = @import("std").zig.c_builtins.__builtin_strcmp;
pub const __builtin_object_size = @import("std").zig.c_builtins.__builtin_object_size;
pub const __builtin___memset_chk = @import("std").zig.c_builtins.__builtin___memset_chk;
pub const __builtin_memset = @import("std").zig.c_builtins.__builtin_memset;
pub const __builtin___memcpy_chk = @import("std").zig.c_builtins.__builtin___memcpy_chk;
pub const __builtin_memcpy = @import("std").zig.c_builtins.__builtin_memcpy;
pub const __builtin_expect = @import("std").zig.c_builtins.__builtin_expect;
pub const __builtin_nanf = @import("std").zig.c_builtins.__builtin_nanf;
pub const __builtin_huge_valf = @import("std").zig.c_builtins.__builtin_huge_valf;
pub const __builtin_inff = @import("std").zig.c_builtins.__builtin_inff;
pub const __builtin_isnan = @import("std").zig.c_builtins.__builtin_isnan;
pub const __builtin_isinf = @import("std").zig.c_builtins.__builtin_isinf;
pub const __builtin_isinf_sign = @import("std").zig.c_builtins.__builtin_isinf_sign;
pub const __has_builtin = @import("std").zig.c_builtins.__has_builtin;
pub const __builtin_assume = @import("std").zig.c_builtins.__builtin_assume;
pub const __builtin_unreachable = @import("std").zig.c_builtins.__builtin_unreachable;
pub const __builtin_constant_p = @import("std").zig.c_builtins.__builtin_constant_p;
pub const __builtin_mul_overflow = @import("std").zig.c_builtins.__builtin_mul_overflow;
pub const intmax_t = c_longlong;
pub const uintmax_t = c_ulonglong;
pub const time_t = c_longlong;
pub const suseconds_t = c_longlong;
pub const struct_timeval = extern struct {
    tv_sec: time_t = @import("std").mem.zeroes(time_t),
    tv_usec: suseconds_t = @import("std").mem.zeroes(suseconds_t),
};
pub const struct_timespec = extern struct {
    tv_sec: time_t = @import("std").mem.zeroes(time_t),
    tv_nsec: c_long = @import("std").mem.zeroes(c_long),
};
pub const struct_iovec = extern struct {
    iov_base: ?*anyopaque = @import("std").mem.zeroes(?*anyopaque),
    iov_len: usize = @import("std").mem.zeroes(usize),
};
pub const int_fast8_t = i8;
pub const int_fast64_t = i64;
pub const int_least8_t = i8;
pub const int_least16_t = i16;
pub const int_least32_t = i32;
pub const int_least64_t = i64;
pub const uint_fast8_t = u8;
pub const uint_fast64_t = u64;
pub const uint_least8_t = u8;
pub const uint_least16_t = u16;
pub const uint_least32_t = u32;
pub const uint_least64_t = u64;
pub const int_fast16_t = i16;
pub const int_fast32_t = i32;
pub const uint_fast16_t = u16;
pub const uint_fast32_t = u32;
pub const ptrdiff_t = c_long;
pub const wchar_t = c_int;
pub const max_align_t = extern struct {
    __clang_max_align_nonce1: c_longlong align(8) = @import("std").mem.zeroes(c_longlong),
    __clang_max_align_nonce2: c_longdouble align(16) = @import("std").mem.zeroes(c_longdouble),
};
pub const struct_http_trigger_string_t = extern struct {
    ptr: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const http_trigger_string_t = struct_http_trigger_string_t;
pub const struct_wasi_io_0_2_0_poll_own_pollable_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_io_0_2_0_poll_own_pollable_t = struct_wasi_io_0_2_0_poll_own_pollable_t;
pub const struct_wasi_io_0_2_0_poll_borrow_pollable_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_io_0_2_0_poll_borrow_pollable_t = struct_wasi_io_0_2_0_poll_borrow_pollable_t;
pub const wasi_io_0_2_0_poll_list_borrow_pollable_t = extern struct {
    ptr: [*c]wasi_io_0_2_0_poll_borrow_pollable_t = @import("std").mem.zeroes([*c]wasi_io_0_2_0_poll_borrow_pollable_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const http_trigger_list_u32_t = extern struct {
    ptr: [*c]u32 = @import("std").mem.zeroes([*c]u32),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const wasi_clocks_0_2_0_monotonic_clock_instant_t = u64;
pub const wasi_clocks_0_2_0_monotonic_clock_duration_t = u64;
pub const wasi_clocks_0_2_0_monotonic_clock_own_pollable_t = wasi_io_0_2_0_poll_own_pollable_t;
pub const struct_wasi_io_0_2_0_error_own_error_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_io_0_2_0_error_own_error_t = struct_wasi_io_0_2_0_error_own_error_t;
pub const struct_wasi_io_0_2_0_error_borrow_error_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_io_0_2_0_error_borrow_error_t = struct_wasi_io_0_2_0_error_borrow_error_t;
pub const wasi_io_0_2_0_streams_own_error_t = wasi_io_0_2_0_error_own_error_t;
const union_unnamed_1 = extern union {
    last_operation_failed: wasi_io_0_2_0_streams_own_error_t,
};
pub const struct_wasi_io_0_2_0_streams_stream_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_1 = @import("std").mem.zeroes(union_unnamed_1),
};
pub const wasi_io_0_2_0_streams_stream_error_t = struct_wasi_io_0_2_0_streams_stream_error_t;
pub const struct_wasi_io_0_2_0_streams_own_input_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_io_0_2_0_streams_own_input_stream_t = struct_wasi_io_0_2_0_streams_own_input_stream_t;
pub const struct_wasi_io_0_2_0_streams_borrow_input_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_io_0_2_0_streams_borrow_input_stream_t = struct_wasi_io_0_2_0_streams_borrow_input_stream_t;
pub const struct_wasi_io_0_2_0_streams_own_output_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_io_0_2_0_streams_own_output_stream_t = struct_wasi_io_0_2_0_streams_own_output_stream_t;
pub const struct_wasi_io_0_2_0_streams_borrow_output_stream_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_io_0_2_0_streams_borrow_output_stream_t = struct_wasi_io_0_2_0_streams_borrow_output_stream_t;
pub const http_trigger_list_u8_t = extern struct {
    ptr: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    len: usize = @import("std").mem.zeroes(usize),
};
const union_unnamed_2 = extern union {
    ok: http_trigger_list_u8_t,
    err: wasi_io_0_2_0_streams_stream_error_t,
};
pub const wasi_io_0_2_0_streams_result_list_u8_stream_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_2 = @import("std").mem.zeroes(union_unnamed_2),
};
const union_unnamed_3 = extern union {
    ok: u64,
    err: wasi_io_0_2_0_streams_stream_error_t,
};
pub const wasi_io_0_2_0_streams_result_u64_stream_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_3 = @import("std").mem.zeroes(union_unnamed_3),
};
pub const wasi_io_0_2_0_streams_own_pollable_t = wasi_io_0_2_0_poll_own_pollable_t;
const union_unnamed_4 = extern union {
    err: wasi_io_0_2_0_streams_stream_error_t,
};
pub const wasi_io_0_2_0_streams_result_void_stream_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_4 = @import("std").mem.zeroes(union_unnamed_4),
};
pub const wasi_http_0_2_0_types_duration_t = wasi_clocks_0_2_0_monotonic_clock_duration_t;
const union_unnamed_5 = extern union {
    other: http_trigger_string_t,
};
pub const struct_wasi_http_0_2_0_types_method_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_5 = @import("std").mem.zeroes(union_unnamed_5),
};
pub const wasi_http_0_2_0_types_method_t = struct_wasi_http_0_2_0_types_method_t;
const union_unnamed_6 = extern union {
    other: http_trigger_string_t,
};
pub const struct_wasi_http_0_2_0_types_scheme_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_6 = @import("std").mem.zeroes(union_unnamed_6),
};
pub const wasi_http_0_2_0_types_scheme_t = struct_wasi_http_0_2_0_types_scheme_t;
pub const http_trigger_option_string_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: http_trigger_string_t = @import("std").mem.zeroes(http_trigger_string_t),
};
pub const http_trigger_option_u16_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: u16 = @import("std").mem.zeroes(u16),
};
pub const struct_wasi_http_0_2_0_types_dns_error_payload_t = extern struct {
    rcode: http_trigger_option_string_t = @import("std").mem.zeroes(http_trigger_option_string_t),
    info_code: http_trigger_option_u16_t = @import("std").mem.zeroes(http_trigger_option_u16_t),
};
pub const wasi_http_0_2_0_types_dns_error_payload_t = struct_wasi_http_0_2_0_types_dns_error_payload_t;
pub const http_trigger_option_u8_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: u8 = @import("std").mem.zeroes(u8),
};
pub const struct_wasi_http_0_2_0_types_tls_alert_received_payload_t = extern struct {
    alert_id: http_trigger_option_u8_t = @import("std").mem.zeroes(http_trigger_option_u8_t),
    alert_message: http_trigger_option_string_t = @import("std").mem.zeroes(http_trigger_option_string_t),
};
